--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,5 @@ jobs:
         uses: codecov/codecov-action@v4
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      - name: Install Pylint
-      - run: pip install pylint
-      - name: Run Pylint test
+      - name: Lint
       - run: poetry run pylint src
